<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_maps"
        android:icon="@drawable/ic_map"
        android:title="@string/maps"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_account"
        app:showAsAction="always" />
</menu>